Improve MainMenuScreen